update classifier-based guidance on qed and sa

--- a/config/prop_train.yaml
+++ b/config/prop_train.yaml
@@ -24,7 +24,8 @@ model:
   dropout: 0
 
 train:
-  prop: parp1_qed_sa
+  # prop: parp1_qed_sa
+  prop: sa
   num_epochs: 10
   lr: 0.001
   lr_schedule: False
