--- a/config/sample.yaml
+++ b/config/sample.yaml
@@ -11,7 +11,7 @@ model:
     scale_eps: 0.8
     n_steps: 1
   prop:
-    ckpt: prop_parp1
+    ckpt: sa
     weight_x: 0.5   # 0.5, 0.4, 0.6, 0.7, and 0.6 for parp1, fa7, 5ht1b, braf, and jak2, respectively
     weight_adj: 0
 
@@ -20,4 +20,4 @@ sample:
   probability_flow: False
   eps: 1.0e-3
   num_samples: 3000
-  ood: 0.04
+  ood: 0.0
