--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
+# *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -183,8 +183,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.vscode
 
 tmp/
-logs_sample/ZINC250k/parp1_qed_sa
+# logs_sample/ZINC250k/parp1_qed_sa
 logs_sample/ZINC250k/qed
 logs_sample/ZINC250k/sa
