--- a/config/prop_train.yaml
+++ b/config/prop_train.yaml
@@ -25,7 +25,7 @@ model:
 
 train:
   # prop: parp1_qed_sa
-  prop: sa
+  prop: qed   # qed or sa
   num_epochs: 10
   lr: 0.001
   lr_schedule: False
